# vndb

./: .editorconfig  .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  monthly_legacy.py  monthly_minimal.py  pyproject.toml  vndb-barchartrace.py  vndb-plot.r  vndb-sanitizer.py  vndb.py  vndb_barchartrace.py  vndb_query.py  vndb_sanitizer.py
example/: lengthvotes.csv  monthly.csv  vndb-list-export-20240101.csv
legacy/: Makefile  monthly-legacy.sql  monthly_legacy.py  vndb-plot.r  vndb_barchartrace_legacy.py  vndb_sanitizer_legacy.py
sql/: lengthvotes-query.sql  lengthvotes.sql  monthly-legacy.sql  monthly-minimal.sql  monthly.sql  user-list-query.sql  user-list.sql
